upgrade wo compression

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/webXR.loader.js";
+      var loaderUrl = buildUrl + "/xrAgain.loader.js";
       var config = {
-        dataUrl: buildUrl + "/webXR.data.gz",
-        frameworkUrl: buildUrl + "/webXR.framework.js.gz",
-        codeUrl: buildUrl + "/webXR.wasm.gz",
+        dataUrl: buildUrl + "/xrAgain.data",
+        frameworkUrl: buildUrl + "/xrAgain.framework.js",
+        codeUrl: buildUrl + "/xrAgain.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "nemesi.dev",
         productName: "webXR",
